--- a/A-What you need to know/Business incubator - a safe start.htm
+++ b/A-What you need to know/Business incubator - a safe start.htm
@@ -56,6 +56,7 @@
 }
 
 </style>
+        <link href="../Resources/Stylesheets/Alternate-Row-Color.css" rel="stylesheet" data-mc-stylesheet-type="table" />
         <script src="../Resources/Scripts/jquery.min.js" type="text/javascript">
         </script>
         <script src="../Resources/Scripts/purify.min.js" type="text/javascript" defer="defer">
@@ -213,13 +214,13 @@
                                         </div>
                                         <div role="main" id="mc-main-content">
                                             <h1>Business incubator - a safe start</h1>
-                                            <div class="Summary">
-                                                <p style="text-align: justify;" data-mc-autonum="&lt;b&gt;In a nutshell: &lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell: </b></span></span>&#160;</p>
+                                            <div class="AFRNUTSHELL">
+                                                <p style="text-align: justify;" data-mc-autonum="&lt;b&gt;In a nutshell:&lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell:</b></span></span>&#160;</p>
                                                 <p style="text-align: justify;">Before you decide to start your own business, you can test your business ideas in a safe environment.</p>
                                             </div>
                                             <p style="text-align: justify;">Before you start running your own business activity, you might want to consider testing your business ideas and your entrepreneurial skills in a <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open glossaryTerm MCTextPopupHotSpot_" glossTerm="Glossary.Term1">business incubator<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>A business incubator is an entity that gives a potential entrepreneur a legal personality to use. A natural person can run a business activity through a business incubator without a need to register business</span></a>. </p>
                                             <p style="text-align: justify;">It is recommended, if you consider opening a business, but do not have resources or knowledge, or simply are too uncertain to start a business on your own.</p>
-                                            <p style="text-align: justify;">A <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open MCTextPopupHotSpot_ #text" style="text-align: justify;">business incubator<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>A business incubator is an entity that gives a potential entrepreneur a legal personality to use. A natural person can run a business activity through a business incubator without a need to register business</span></a> is a convenient training ground, where a would-be businessperson can test their business ideas and see what it is like to run a firm.</p>
+                                            <p style="text-align: justify;">A business incubator is a convenient training ground, where a would-be businessperson can test their business ideas and see what it is like to run a firm.</p>
                                             <p style="text-align: justify;">How a business incubator operates:</p>
                                             <ul>
                                                 <li>you sign an agreement with the incubator of your choice</li>
@@ -240,20 +241,55 @@
                                                 <li>when you consider a large-scale or complex activity</li>
                                                 <li>when your business requires a special licence or a permit that are issued to individual entrepreneurs</li>
                                             </ul>
-                                            <p style="text-align: justify;">What are the advantages:</p>
-                                            <ul>
-                                                <li style="text-align: justify;">professional assistance – you can consult an advisor who will assess your chances for success and help you choose your business strategy</li>
-                                                <li style="text-align: justify;">low costs – you only pay a monthly fee and do not need to worry about social security contributions, accounting, business consultancy, etc.</li>
-                                                <li style="text-align: justify;">access to facilities – you can use the incubator’s co-working space or rent a conference room for a meeting with an important client</li>
-                                                <li style="text-align: justify;">additional services – incubators offer various training sessions or can help you develop your business, promote your brand, acquire new clients or customers.</li>
-                                            </ul>
-                                            <p style="text-align: justify;">What are the disadvantages:</p>
-                                            <ul>
-                                                <li style="text-align: justify;">workflow is rather slow - it might take time to prepare or approve documents</li>
-                                                <li style="text-align: justify;">your business expenses are not tax-deductible</li>
-                                            </ul>
-                                            <div class="Action">
-                                                <p style="text-align: justify;" data-mc-autonum="&lt;b&gt;What to do: &lt;/b&gt;"><span class="autonumber"><span><b>What to do: </b></span></span>&#160;</p>
+                                            <h2>Advantages and disadvantages of a business incubator</h2>
+                                            <p>&#160;</p>
+                                            <table style="width: 100%;mc-table-style: url('../Resources/Stylesheets/Alternate-Row-Color.css');margin-left: 0;margin-right: auto;" class="TableStyle-Alternate-Row-Color" cellspacing="21">
+                                                <col class="TableStyle-Alternate-Row-Color-Column-Column1" />
+                                                <col class="TableStyle-Alternate-Row-Color-Column-Column1" />
+                                                <thead>
+                                                    <tr class="TableStyle-Alternate-Row-Color-Head-Header1">
+                                                        <th class="TableStyle-Alternate-Row-Color-HeadE-Column1-Header1">Advantages</th>
+                                                        <th class="TableStyle-Alternate-Row-Color-HeadD-Column1-Header1">Disadvantages</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr class="TableStyle-Alternate-Row-Color-Body-Body1">
+                                                        <td class="TableStyle-Alternate-Row-Color-BodyE-Column1-Body1">
+                                                            <p style="text-align: justify;">Professional assistance – you can consult an advisor who will assess your chances for success and help you choose your business strategy</p>
+                                                        </td>
+                                                        <td class="TableStyle-Alternate-Row-Color-BodyD-Column1-Body1">
+                                                            <p style="text-align: justify;">Workflow is rather slow - it might take time to prepare or approve documents</p>
+                                                        </td>
+                                                    </tr>
+                                                    <tr class="TableStyle-Alternate-Row-Color-Body-Body2">
+                                                        <td class="TableStyle-Alternate-Row-Color-BodyE-Column1-Body2">
+                                                            <p style="text-align: justify;">Low costs – you only pay a monthly fee and do not need to worry about social security contributions, accounting, business consultancy, etc.</p>
+                                                        </td>
+                                                        <td class="TableStyle-Alternate-Row-Color-BodyD-Column1-Body2">
+                                                            <p class="table-text">Your business expenses are not tax-deductible</p>
+                                                        </td>
+                                                    </tr>
+                                                    <tr class="TableStyle-Alternate-Row-Color-Body-Body1">
+                                                        <td class="TableStyle-Alternate-Row-Color-BodyE-Column1-Body1">
+                                                            <p style="text-align: justify;">Access to facilities – you can use the incubator’s co-working space or rent a conference room for a meeting with an important client</p>
+                                                        </td>
+                                                        <td class="TableStyle-Alternate-Row-Color-BodyD-Column1-Body1">
+                                                            <p class="table-text">&#160;</p>
+                                                        </td>
+                                                    </tr>
+                                                    <tr class="TableStyle-Alternate-Row-Color-Body-Body2">
+                                                        <td class="TableStyle-Alternate-Row-Color-BodyB-Column1-Body2">
+                                                            <p class="table-text">Additional services – incubators offer various training sessions or can help you develop your business, promote your brand, acquire new clients or customers.</p>
+                                                        </td>
+                                                        <td class="TableStyle-Alternate-Row-Color-BodyA-Column1-Body2">
+                                                            <p class="table-text">&#160;</p>
+                                                        </td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+                                            <p>&#160;</p>
+                                            <div class="AFRACTION">
+                                                <p style="text-align: justify;" data-mc-autonum="&lt;b&gt;What to do:&lt;/b&gt;"><span class="autonumber"><span><b>What to do:</b></span></span>&#160;</p>
                                                 <div>
                                                     <ol>
                                                         <li value="1">Consider using a business incubator as a starting point.</li>
