--- a/A-What you need to know/Fiscal cash register.htm
+++ b/A-What you need to know/Fiscal cash register.htm
@@ -213,9 +213,9 @@
                                         </div>
                                         <div role="main" id="mc-main-content">
                                             <h1>Fiscal cash register</h1>
-                                            <div class="Summary">
-                                                <p data-mc-autonum="&lt;b&gt;In a nutshell: &lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell: </b></span></span>&#160;</p>
-                                                <p>Certain types of activities require using a <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open MCTextPopupHotSpot_ #text">fiscal cash register<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Fiscal cash register is  a device where you register all the products or services that you sold</span></a></p>
+                                            <div class="AFRNUTSHELL">
+                                                <p data-mc-autonum="&lt;b&gt;In a nutshell:&lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell:</b></span></span>&#160;</p>
+                                                <p>Certain types of activities require using a fiscal cash register</p>
                                             </div>
                                             <p>A <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open glossaryTerm MCTextPopupHotSpot_" glossTerm="Glossary.Term2">fiscal cash register<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Fiscal cash register is  a device where you register all the products or services that you sold</span></a> is a device where you register all the products or services that you sold.</p>
                                             <p>
@@ -236,10 +236,11 @@
                                                 <li>when you sell specified types of goods or services</li>
                                                 <li>when the value of your sales to natural persons and farmers referred to above did not exceed PLN 20,000 in the previous fiscal year.</li>
                                             </ul>
-                                            <div class="Remember">
-                                                <p data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span>&#160;</p>
+                                            <div class="AFREMEMBER">
+                                                <p data-mc-autonum="&lt;b&gt;Remember:&lt;/b&gt;"><span class="autonumber"><span><b>Remember:</b></span></span>&#160;</p>
                                                 <p>This exemption does not apply, if you sell goods or services that are subject to registration requirement.</p>
                                             </div>
+                                            <p>&#160;</p>
                                             <p>You are required to have a fiscal cash register, if you:</p>
                                             <ul>
                                                 <li>sell the following goods:</li>
@@ -249,17 +250,17 @@
                                                 <li>provide the following services:</li>
                                             </ul>
                                             <p>taxi services, repair of motors and motor bikes, tax advisory services, catering, including seasonal catering, hairdressing and barbering, beauty care and cosmetology</p>
-                                            <p>The list below is an example only. The full list of goods and services that require using a fiscal cash register is available <a href="https://isap.sejm.gov.pl/isap.nsf/DocDetails.xsp?id=WDU20210002442" target="_blank">here.</a></p>
+                                            <p>The list provided is an example only. The full list of goods and services that require using a fiscal cash register is available in the <a href="https://isap.sejm.gov.pl/isap.nsf/DocDetails.xsp?id=WDU20210002442" target="_blank">Regulation of the Minister of Finance of 22 December 2021 concerning exemptions from the requirement to register sales with the use of cash registers</a>.</p>
                                             <p>&#160;</p>
-                                            <div class="Remember">
-                                                <p data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span>&#160;</p>
+                                            <div class="AFREMEMBER">
+                                                <p data-mc-autonum="&lt;b&gt;Remember:&lt;/b&gt;"><span class="autonumber"><span><b>Remember:</b></span></span>&#160;</p>
                                                 <p>If you are starting a business activity and expect that your sales to natural persons and farmers will not exceed PLN 20,000, you do not need to have a fiscal cash register. Once you exceed this limit, you will have two months before you become obliged to have a fiscal cash register.</p>
                                             </div>
                                             <h2>Where to buy a cash register</h2>
                                             <p>You can buy a cash register from an authorised entity only. Such providers are licensed by the Ministry of Finance. They are subject to the duty of registration and are required to meet certain conditions.</p>
                                             <p>Search the web and choose a provider. The provider you select will guide you through the required process.</p>
-                                            <div class="Action">
-                                                <p data-mc-autonum="&lt;b&gt;What to do: &lt;/b&gt;"><span class="autonumber"><span><b>What to do: </b></span></span>&#160;</p>
+                                            <div class="AFRACTION">
+                                                <p data-mc-autonum="&lt;b&gt;What to do:&lt;/b&gt;"><span class="autonumber"><span><b>What to do:</b></span></span>&#160;</p>
                                                 <ol>
                                                     <li value="1">Check if you are required to use a fiscal cash register.</li>
                                                     <li value="2">If you are, search for a service provider that will help you with the process.</li>
