--- a/A-What you need to know/Registration.htm
+++ b/A-What you need to know/Registration.htm
@@ -213,22 +213,22 @@
                                         </div>
                                         <div role="main" id="mc-main-content">
                                             <h1>Registration</h1>
-                                            <div class="Summary">
-                                                <p data-mc-autonum="&lt;b&gt;In a nutshell: &lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell: </b></span></span>&#160;</p>
+                                            <div class="AFRNUTSHELL">
+                                                <p data-mc-autonum="&lt;b&gt;In a nutshell:&lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell:</b></span></span>&#160;</p>
                                                 <p>You do not need to register a small-size business activity generating insignificant revenue</p>
                                             </div>
                                             <h2>When registration is not required <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open glossaryTerm MCTextPopupHotSpot_" glossTerm="Glossary.Term5">(unregistered business activity<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Unregistered business activity is a small-size business activity, where the monthly revenue does not exceed a specified limit. It is not subject to the requirement of registration.</span></a>)</h2>
                                             <p>If you plan a small-scale activity and expect to generate an insignificant income only, you can start your business without any formalities – you do not need to register your business.</p>
-                                            <p>You can run an <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open MCTextPopupHotSpot_ #text">unregistered business activity<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Unregistered business activity is a small-size business activity, where the monthly revenue does not exceed a specified limit. It is not subject to the requirement of registration.</span></a>, if you meet all of the following conditions:</p>
+                                            <p>You can run an unregistered business activity, if you meet all of the following conditions:</p>
                                             <ol>
-                                                <li value="1">Your revenue in a single month does not exceed <a name="limit"></a>50% of the minimum remuneration (in 2023, the minimum salary is PLN 3490  in the first half of the year – until 30 June, and PLN 3600 in the second half of the year, from 1 July). It means that you cannot earn more than PLN 1745 a month in the first half of the year, and more than PLN 1800 a&#160;month in the second half)</li>
+                                                <li value="1">Your revenue in a single month does not exceed <a name="limit"></a>50% of the minimum remuneration (in 2023, the minimum salary is PLN 3490  in the first half of the year – until 30 June, and PLN 3600 in the second half of the year, from 1 July). It means that you cannot earn more than PLN 1745 a month in the first half of the year, and more than PLN 1800 a&#160;month in the second half) . Current information on the average salary and the minimum salary is published by the <a href="https://www.zus.pl/baza-wiedzy/skladki-wskazniki-odsetki/wskazniki/minimalne-i-przecietne-wynagrodzenie" target="_blank">Social Security Office</a>.</li>
                                                 <li value="2">You are a natural person</li>
                                                 <li value="3">You do not operate a civil-law partnership</li>
                                                 <li value="4">You do not run a regulated activity, i.e., an activity that requires a permit or a licence</li>
                                                 <li value="5">You have not been conducting any business activity for the last 60 months.</li>
                                             </ol>
-                                            <div class="Remember">
-                                                <p data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span>&#160;</p>
+                                            <div class="AFREMEMBER">
+                                                <p data-mc-autonum="&lt;b&gt;Remember:&lt;/b&gt;"><span class="autonumber"><span><b>Remember:</b></span></span>&#160;</p>
                                                 <p>You do not need to register a business, if you plan to operate as a farmer and engage in </p>
                                                 <ul>
                                                     <li>offering accommodation to holidaymakers (agroturystyka)</li>
@@ -237,17 +237,17 @@
                                                 </ul>
                                             </div>
                                             <p>&#160;</p>
-                                            <div class="Remember">
-                                                <p data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span>&#160;</p>
+                                            <div class="AFRREMEMBER">
+                                                <p>&#160;</p>
                                                 <p>You can run an unregistered business activity while working under an employment contract. This is a good and safe way to test your business in a safe environment, without quitting your permanent job.</p>
                                             </div>
                                             <p>Advantages:</p>
                                             <ul>
-                                                <li>Limited costs and formalities . You do not need to register your business with <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open MCTextPopupHotSpot_ #text">CEIDG<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Centralna Informacja i Ewidencja Działalności Gospodarczej – the Central Register and Information on Economic Activity – is the Polish office run by the minister in charge of economic matters, where sole traderships and civil-law partnerships are registered</span></a>, tax office or the Central Statistical Office – you do not need a NIP or <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open MCTextPopupHotSpot_ #text">REGON<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>REGON is a statistical number assigned to businesses by the Polish Statistical Office (GUS).</span></a>&#160;number.</li>
+                                                <li>Limited costs and formalities . You do not need to register your business with CEIDG, tax office or the Central Statistical Office – you do not need a NIP or REGON&#160;number.</li>
                                                 <li>You do not pay social and health insurance contributions. If you operate under a mandate agreement (<i>umowa zlecenie</i>), your client will be responsible for paying any social insurance contributions.</li>
                                                 <li>You do not need to pay monthly tax advances. Your yearly income will be included in your annual tax declaration PIT-36.</li>
                                                 <li>You do not need to keep full accounting records. A simplified sales register will be sufficient.</li>
-                                                <li>	As a result, an unregistered business activity is exempt from VAT, except for some types of activity that require a VAT status regardless of revenues. See here for details.</li>
+                                                <li>	As a result, an unregistered business activity is exempt from VAT, except for some types of activity that require a VAT status regardless of revenues. </li>
                                             </ul>
                                             <p>What are your duties:</p>
                                             <ul>
@@ -255,19 +255,19 @@
                                                 <li>	Issue invoices or bills when a client requests them</li>
                                                 <li>	Respect general consumer rights – right to withdraw from an agreement, to lodge a complaint, etc.</li>
                                             </ul>
-                                            <div class="Remember">
-                                                <p data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span>&#160;</p>
+                                            <div class="AFREMEMBER">
+                                                <p data-mc-autonum="&lt;b&gt;Remember:&lt;/b&gt;"><span class="autonumber"><span><b>Remember:</b></span></span>&#160;</p>
                                                 <p>You need to monitor your revenues. Once the monthly limit is exceeded, you need to  register your business activity within 7 days.</p>
                                             </div>
                                             <p>&#160;</p>
-                                            <div class="Action">
-                                                <p data-mc-autonum="&lt;b&gt;What to do: &lt;/b&gt;"><span class="autonumber"><span><b>What to do: </b></span></span>&#160;</p>
+                                            <div class="AFRACTION">
+                                                <p data-mc-autonum="&lt;b&gt;What to do:&lt;/b&gt;"><span class="autonumber"><span><b>What to do:</b></span></span>&#160;</p>
                                                 <p>Estimate your expected earnings to see if you can operate an unregistered business activity</p>
                                             </div>
                                             <h2>When registration is required</h2>
-                                            <p>If you started your business activity as an unregistered one, you need to monitor your revenues .Once they exceed the limit (see <a href="#limit">here</a>) in a given month, you have 7 business days to register your activity with CEIDG.</p>
-                                            <div class="Action">
-                                                <p data-mc-autonum="&lt;b&gt;What to do: &lt;/b&gt;"><span class="autonumber"><span><b>What to do: </b></span></span>&#160;</p>
+                                            <p>If you started your business activity as an unregistered one, you need to monitor your revenues .Once they exceed the <a href="#limit" target="_blank">limit</a> in a given month, you have 7 business days to register your activity with CEIDG.</p>
+                                            <div class="AFRACTION">
+                                                <p data-mc-autonum="&lt;b&gt;What to do:&lt;/b&gt;"><span class="autonumber"><span><b>What to do:</b></span></span>&#160;</p>
                                                 <ol>
                                                     <li value="1">Monitor your earnings</li>
                                                     <li value="2">You will need to register your business activity, once they exceed the limit for an unregistered activity.</li>
