--- a/A-What you need to know/Single tradership - pros and cons.htm
+++ b/A-What you need to know/Single tradership - pros and cons.htm
@@ -214,7 +214,7 @@
                                         </div>
                                         <div role="main" id="mc-main-content">
                                             <h1>Sole tradership - pros and cons</h1>
-                                            <p>Please see below the summary of the advantages and disadvantages of a <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open MCTextPopupHotSpot_ #text">sole tradership<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>in Polish: jednoosobowa działalność gospodarcza or JDG, is a business activity owned and run by one person, in which there is no legal distinction between the owner and the business entity</span></a></p>
+                                            <p>Please see below the summary of the advantages and disadvantages of a sole tradership</p>
                                             <table style="width: 100%;mc-table-style: url('../Resources/Stylesheets/Alternate-Row-Color.css');" class="TableStyle-Alternate-Row-Color" cellspacing="21">
                                                 <col class="TableStyle-Alternate-Row-Color-Column-Column1" style="width: 608px;" />
                                                 <col class="TableStyle-Alternate-Row-Color-Column-Column1" />
