--- a/B-What you need to choose/Accounting.htm
+++ b/B-What you need to choose/Accounting.htm
@@ -217,8 +217,8 @@
                                             <p>
                                                 <img src="../Resources/Images/accountant.jpg" />
                                             </p>
-                                            <div class="Summary">
-                                                <p class="p_1" style="font-size: 12pt;font-weight: normal;" data-mc-autonum="&lt;b&gt;In a nutshell: &lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell: </b></span></span> </p>
+                                            <div class="AFRNUTSHELL">
+                                                <p class="p_1" style="font-size: 12pt;font-weight: normal;" data-mc-autonum="&lt;b&gt;In a nutshell:&lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell:</b></span></span> </p>
                                                 <p class="p_1" style="font-size: 12pt;font-weight: normal;">You will need to keep accounting for your business. Its form and complexity depend on the taxation form chosen and on the level of your revenues.</p>
                                             </div>
                                             <h2 style="font-style: normal;font-size: 12pt;">Forms of accounting</h2>
@@ -308,9 +308,9 @@
                                                 <li style="font-style: normal;font-size: 12pt;font-family: Arial;">to inform your accountant of any changes in your business that could impact your accounting</li>
                                                 <li style="font-style: normal; font-size: 12pt; font-family: Arial;">to pay taxes and other public dues according to the information that you receive from your accountant.</li>
                                             </ul>
-                                            <div class="Remember">
-                                                <p class="p_11" style="font-style: normal; font-size: 12pt;" data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span>&#160;</p>
-                                                <p class="p_11" style="font-style: normal; font-size: 12pt;">You are solely responsible for timely payment of taxes and other dues.</p>
+                                            <div class="AFREMEMBER">
+                                                <p data-mc-autonum="&lt;b&gt;Remember:&lt;/b&gt;"><span class="autonumber"><span><b>Remember:</b></span></span>&#160;</p>
+                                                <p>You are solely responsible for timely payment of taxes and other dues. </p>
                                             </div>
                                             <h2 style="text-align: justify;">Be your own accountant</h2>
                                             <p class="p_4" style="color: #000000;font-style: normal;font-size: 12pt;text-align: justify;">You can keep your accounting, using modern and user-friendly tools. Just search the Internet and choose one of many on-line accounting service providers. Usually they offer a free trial month or a demo version,&#160; so you can test the chosen platform and see if it suits your needs. </p>
@@ -330,19 +330,16 @@
                                                 </li>
                                                 <li class="li_3">
                                                     <p class="p_4" style="color: #000000;font-style: normal;font-size: 12pt;text-align: justify;">when necessary, you can ask your accountant for advice (for an extra fee). </p>
-                                                    <p class="p_13" style="color: #000000;font-style: normal;font-size: 12pt;text-align: justify;"> </p>
-                                                    <div class="Action">
-                                                        <p style="color: #000000;font-weight: normal;font-style: normal;font-size: 12pt;font-family: Arial;" data-mc-autonum="&lt;b&gt;What to do: &lt;/b&gt;"><span class="autonumber"><span><b>What to do: </b></span></span>&#160;</p>
-                                                        <ol>
-                                                            <li style="color: #000000;font-weight: normal;font-style: normal;font-size: 12pt;font-family: Arial;" value="1">Choose an appropriate form of accounting depending on the scale of your business.</li>
-                                                            <li style="color: #000000;font-weight: normal;font-style: normal;font-size: 12pt;font-family: Arial;" value="2">Decide whether you will hire a professional accountant or keep your own accounting.</li>
-                                                            <li style="color: #000000; font-weight: normal; font-style: normal; font-size: 12pt; font-family: Arial;" value="3">Enter the relevant information in section 17 of your registration application.</li>
-                                                        </ol>
-                                                    </div>
-                                                    <p class="p_3" style="color: #000000;">&#160;</p>
                                                 </li>
                                             </ul>
-                                            <p>&#160;</p>
+                                            <div class="AFRACTION">
+                                                <p data-mc-autonum="&lt;b&gt;What to do:&lt;/b&gt;"><span class="autonumber"><span><b>What to do:</b></span></span>&#160;</p>
+                                                <ol>
+                                                    <li style="color: #000000;font-weight: normal;font-style: normal;font-size: 12pt;font-family: Arial;" value="1">Choose an appropriate form of accounting depending on the scale of your business.</li>
+                                                    <li style="color: #000000;font-weight: normal;font-style: normal;font-size: 12pt;font-family: Arial;" value="2">Decide whether you will hire a professional accountant or keep your own accounting.</li>
+                                                    <li style="color: #000000;font-weight: normal;font-style: normal;font-size: 12pt;font-family: Arial;" value="3">Enter the relevant information in section 17 of your registration application.</li>
+                                                </ol>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
