--- a/B-What you need to choose/Business address.htm
+++ b/B-What you need to choose/Business address.htm
@@ -213,8 +213,8 @@
                                         </div>
                                         <div role="main" id="mc-main-content">
                                             <h1>Business address</h1>
-                                            <div class="Summary">
-                                                <p style="text-align: justify;" data-mc-autonum="&lt;b&gt;In a nutshell: &lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell: </b></span></span>&#160;</p>
+                                            <div class="AFRNUTSHELL">
+                                                <p style="text-align: justify;" data-mc-autonum="&lt;b&gt;In a nutshell:&lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell:</b></span></span>&#160;</p>
                                                 <p style="text-align: justify;">You can, but do not have to, indicate a business address. You must provide a correspondence address, though.</p>
                                             </div>
                                             <p>&#160;</p>
@@ -225,8 +225,8 @@
                                                 <li>	one permanent place of business</li>
                                                 <li>	more permanent places of business (branches)</li>
                                             </ul>
-                                            <div class="Remember">
-                                                <p data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span>&#160;</p>
+                                            <div class="AFREMEMBER">
+                                                <p data-mc-autonum="&lt;b&gt;Remember:&lt;/b&gt;"><span class="autonumber"><span><b>Remember:</b></span></span>&#160;</p>
                                                 <p>If you want to register a permanent address for your business, you need to have a legal title to it.</p>
                                             </div>
                                             <p>Such legal title could be:</p>
@@ -246,19 +246,19 @@
                                                 <li>an administrative decision</li>
                                                 <li>a written tenancy or lease agreement or an agreement for lending for use</li>
                                             </ul>
-                                            <p style="text-align: justify;">You do not need to show any documents proving your title to the address or attach them to your application, but when you indicate a particular address in your application, you declare that you have the relevant legal title to the premises in question. The body responsible for keeping the <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open MCTextPopupHotSpot_ #text" style="text-align: justify;">CEIDG<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Centralna Informacja i Ewidencja Działalności Gospodarczej – the Central Register and Information on Economic Activity – is the Polish office run by the minister in charge of economic matters, where sole traderships and civil-law partnerships are registered</span></a> register (the relevant minister) can request you to present the relevant document. Then you will need to comply with the request within 7 days of request. If you fail to do it, your entry in CEIDG will be deleted.</p>
-                                            <div class="Remember">
-                                                <p data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span> </p>
+                                            <p style="text-align: justify;">You do not need to show any documents proving your title to the address or attach them to your application, but when you indicate a particular address in your application, you declare that you have the relevant legal title to the premises in question. The body responsible for keeping the CEIDG register (the relevant minister) can request you to present the relevant document. Then you will need to comply with the request within 7 days of request. If you fail to do it, your entry in CEIDG will be deleted.</p>
+                                            <div class="AFREMEMBER">
+                                                <p data-mc-autonum="&lt;b&gt;Remember:&lt;/b&gt;"><span class="autonumber"><span><b>Remember:</b></span></span> </p>
                                                 <p>If you are planning to run your business activity in rented premises, you need to obtain the landlord’s consent.</p>
                                             </div>
                                             <p>&#160;</p>
-                                            <div class="Remember">
-                                                <p data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span>&#160;</p>
+                                            <div class="AFREMEMBER">
+                                                <p data-mc-autonum="&lt;b&gt;Remember:&lt;/b&gt;"><span class="autonumber"><span><b>Remember:</b></span></span>&#160;</p>
                                                 <p>You are required to provide a correspondence address, that is, the address where all correspondence regarding your business activity will be sent. It can be the address of your permanent residence or any other address where you will collect correspondence.</p>
                                             </div>
                                             <p>&#160;</p>
-                                            <div class="Action">
-                                                <p data-mc-autonum="&lt;b&gt;What to do: &lt;/b&gt;"><span class="autonumber"><span><b>What to do: </b></span></span>&#160;</p>
+                                            <div class="AFRACTION">
+                                                <p data-mc-autonum="&lt;b&gt;What to do:&lt;/b&gt;"><span class="autonumber"><span><b>What to do:</b></span></span>&#160;</p>
                                                 <ol>
                                                     <li value="1">Choose a correspondence address and, optionally, a business address.</li>
                                                     <li value="2">If you choose a business address, check if you have the relevant legal title to the premises. </li>
