--- a/B-What you need to choose/Name for your business.htm
+++ b/B-What you need to choose/Name for your business.htm
@@ -213,16 +213,16 @@
                                         </div>
                                         <div role="main" id="mc-main-content">
                                             <h1>Name for your business</h1>
-                                            <div class="Summary">
-                                                <p data-mc-autonum="&lt;b&gt;In a nutshell: &lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell: </b></span></span>&#160;</p>
+                                            <div class="AFRNUTSHELL">
+                                                <p data-mc-autonum="&lt;b&gt;In a nutshell:&lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell:</b></span></span>&#160;</p>
                                                 <p>The name of your business must include your first name and your family name.</p>
                                             </div>
-                                            <p>When you register your business with <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open MCTextPopupHotSpot_ #text">CEIDG<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Centralna Informacja i Ewidencja Działalności Gospodarczej – the Central Register and Information on Economic Activity – is the Polish office run by the minister in charge of economic matters, where sole traderships and civil-law partnerships are registered</span></a>, you will need to select your trade name. The name must include at least your first name and last name. You need to observe the following rules.</p>
+                                            <p>When you register your business with CEIDG, you will need to select your trade name. The name must include at least your first name and last name. You need to observe the following rules.</p>
                                             <ul>
                                                 <li>The required order is: first name, last name. You can add your middle name, if you want.</li>
                                             </ul>
-                                            <div class="Example">
-                                                <p data-mc-autonum="&lt;b&gt;Example: &lt;/b&gt;"><span class="autonumber"><span><b>Example: </b></span></span>Possible options are:</p>
+                                            <div class="AFREXAMPLE">
+                                                <p data-mc-autonum="&lt;b&gt;Example:&lt;/b&gt;"><span class="autonumber"><span><b>Example:</b></span></span>Possible options are:</p>
                                                 <ul>
                                                     <li>John Doe</li>
                                                     <li>John J. Doe</li>
@@ -230,10 +230,10 @@
                                                 </ul>
                                             </div>
                                             <ul>
-                                                <li>The spelling must be the same as in your ID document, except that you do not need to use capital letters only. Remember that capitalization should be correct.</li>
+                                                <li>The spelling must be the same as in your ID document, except that you do not need to use capital letters only. Remember to use standard capitalisation .</li>
                                             </ul>
-                                            <div class="Example">
-                                                <p data-mc-autonum="&lt;b&gt;Example: &lt;/b&gt;"><span class="autonumber"><span><b>Example: </b></span></span>Possible options are:</p>
+                                            <div class="AFREXAMPLE">
+                                                <p data-mc-autonum="&lt;b&gt;Example:&lt;/b&gt;"><span class="autonumber"><span><b>Example:</b></span></span>Possible options are:</p>
                                                 <ul>
                                                     <li>John Doe</li>
                                                     <li>JOHN DOE</li>
@@ -241,10 +241,10 @@
                                                 <p>But not: * jOHN DoE etc.</p>
                                             </div>
                                             <ul>
-                                                <li>If used within a phrase in Polish, it should be in a nominative case.</li>
+                                                <li>If used within a phrase in Polish, your name should be in a nominative case.</li>
                                             </ul>
-                                            <div class="Example">
-                                                <p data-mc-autonum="&lt;b&gt;Example: &lt;/b&gt;"><span class="autonumber"><span><b>Example: </b></span></span>&#160;</p>
+                                            <div class="AFREXAMPLE">
+                                                <p data-mc-autonum="&lt;b&gt;Example:&lt;/b&gt;"><span class="autonumber"><span><b>Example:</b></span></span>&#160;</p>
                                                 <p>John Doe Nauka angielskiego,</p>
                                                 <p>but not *Angielski z Johnem Doe</p>
                                             </div>
@@ -252,8 +252,8 @@
                                                 <li>There should be a single space before the first name and the last name.</li>
                                                 <li>You can add other elements to  your first and last name to describe your business.</li>
                                             </ul>
-                                            <div class="Example">
-                                                <p data-mc-autonum="&lt;b&gt;Example: &lt;/b&gt;"><span class="autonumber"><span><b>Example: </b></span></span>&#160;</p>
+                                            <div class="AFREXAMPLE">
+                                                <p data-mc-autonum="&lt;b&gt;Example:&lt;/b&gt;"><span class="autonumber"><span><b>Example:</b></span></span>&#160;</p>
                                                 <p>You can add a short description of your services – John Doe Nauka angielskiego.</p>
                                                 <p>You can indicate the place where you run your business – John Doe Warszawa Mokotów.</p>
                                                 <p>You can add your alias, your slogan, or any element that can highlight your business objective –  John Doe - Angielski z Johnem.</p>
@@ -261,13 +261,13 @@
                                             <p>&#160;</p>
                                             <p style="text-align: justify;">You can add elements of your name in English (or any other language), but it is recommended to keep them short and simple. You will need to dictate the name of your business to your partners (for example, when you are asking for an invoice), so long and difficult names can cause problems.</p>
                                             <p style="text-align: justify;">John Doe Nauka angielskiego is better than *John Doe Professional English Instruction</p>
-                                            <div class="Remember">
-                                                <p data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span>&#160;</p>
+                                            <div class="AFREMEMBER">
+                                                <p data-mc-autonum="&lt;b&gt;Remember:&lt;/b&gt;"><span class="autonumber"><span><b>Remember:</b></span></span>&#160;</p>
                                                 <p>You can have only one entry in CEIDG for your first name and last name, but you can run various types of business under this single entry.</p>
                                             </div>
                                             <p>&#160;</p>
-                                            <div class="Action">
-                                                <p data-mc-autonum="&lt;b&gt;What to do: &lt;/b&gt;"><span class="autonumber"><span><b>What to do: </b></span></span>&#160;</p>
+                                            <div class="AFRACTION">
+                                                <p data-mc-autonum="&lt;b&gt;What to do:&lt;/b&gt;"><span class="autonumber"><span><b>What to do:</b></span></span>&#160;</p>
                                                 <ol>
                                                     <li value="1">Choose a name for your business meeting the above criteria.</li>
                                                     <li value="2">Enter it in section 5 of your registration application.</li>
