--- a/B-What you need to choose/Social  security status.htm
+++ b/B-What you need to choose/Social  security status.htm
@@ -214,14 +214,14 @@
                                         </div>
                                         <div role="main" id="mc-main-content">
                                             <h1>Social  security status</h1>
-                                            <div class="Summary">
-                                                <p style="text-align: justify;" data-mc-autonum="&lt;b&gt;In a nutshell: &lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell: </b></span></span> </p>
+                                            <div class="AFRNUTSHELL">
+                                                <p style="text-align: justify;" data-mc-autonum="&lt;b&gt;In a nutshell:&lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell:</b></span></span> </p>
                                                 <p style="text-align: justify;">When you register your business, you will be automatically registered as a payer of social security contributions. You may be entitled to certain incentives and reliefs in payment of your social security contributions.
 </p>
                                             </div>
                                             <h2>Obligations – what contributions you need to pay
 </h2>
-                                            <p style="text-align: justify;">When you register your business with <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open MCTextPopupHotSpot_ #text" style="text-align: justify;">CEIDG<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Centralna Informacja i Ewidencja Działalności Gospodarczej – the Central Register and Information on Economic Activity – is the Polish office run by the minister in charge of economic matters, where sole traderships and civil-law partnerships are registered</span></a>, you will be automatically registered with the <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open glossaryTerm MCTextPopupHotSpot_" glossTerm="Glossary.Term7">Social Security Office<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Social Security Office – in Polish: Zakład Ubezpieczeń Społecznych, or ZUS – is the authority responsible for assessing and collecting contributions and payment of social security benefits.</span></a>, or ZUS, as a payer of social security and health contributions.</p>
+                                            <p style="text-align: justify;">When you register your business with CEIDG, you will be automatically registered with the <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open glossaryTerm MCTextPopupHotSpot_" glossTerm="Glossary.Term7">Social Security Office<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Social Security Office – in Polish: Zakład Ubezpieczeń Społecznych, or ZUS – is the authority responsible for assessing and collecting contributions and payment of social security benefits.</span></a>, or ZUS, as a payer of social security and health contributions.</p>
                                             <p style="text-align: justify;">As an entrepreneur, you are obliged to pay the following contributions:</p>
                                             <p style="text-align: justify;">&#160;</p>
                                             <p style="text-align: justify;">Social security contributions</p>
@@ -290,7 +290,8 @@
                                                 </tbody>
                                             </table>
                                             <p style="text-align: justify;">*) The rate varies depending on the size of an enterprise; 1.67% is applicable where there are not more than 9 employees
-
+</p>
+                                            <p style="text-align: justify;">Current information on the average salary and the minimum salary is published by the <a href="https://www.zus.pl/baza-wiedzy/skladki-wskazniki-odsetki/wskazniki/minimalne-i-przecietne-wynagrodzenie" target="_blank">Social Security Office</a>.
 </p>
                                             <p style="text-align: justify;">&#160;</p>
                                             <p style="text-align: justify;">Health security contribution
@@ -340,7 +341,7 @@ You are eligible for the incentive, if:
                                             <p style="text-align: justify;">If you meet these two conditions, you will be obliged to pay the health security contribution only – the social security contribution and the Labour Fund and the Solidarity Fund payments will be waived.
 You can use this incentive for 6 full months – a full month means that if you started your business some time mid-month, this month will not be included in the six-month period. 
 </p>
-                                            <p style="text-align: justify;">If you want to benefit from this incentive, you need to register with the <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open MCTextPopupHotSpot_ #text" style="text-align: justify;">Social Security Office<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Social Security Office – in Polish: Zakład Ubezpieczeń Społecznych, or ZUS – is the authority responsible for assessing and collecting contributions and payment of social security benefits.</span></a> within 7 days from the commencement of your business activity. You will need to file the ZUS ZZA form.
+                                            <p style="text-align: justify;">If you want to benefit from this incentive, you need to register with the Social Security Office within 7 days from the commencement of your business activity. You will need to file the ZUS ZZA form.
 The simplest way is to file the ZUS ZZA form with CEIDG when registering your business.
 You can do it in section 9.1 of your registration application.</p>
                                             <h2>Reduced-base contributions</h2>
@@ -358,15 +359,15 @@ You are eligible for this relief, if:
                                             <p style="text-align: justify;">The latter condition remains valid during the whole 24-month period when you benefit from the relief. It means that you must not work for your former employer or, if you do, you will lose your entitlement to reduced social security contributions.
 </p>
                                             <p style="text-align: justify;">The reduced social security contributions are calculated on the reduced base – namely, 30% of the minimum monthly salary. 
-When you start your business activity, you can either apply for Incentive for New Business, or for <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open MCTextPopupHotSpot_ #text" style="text-align: justify;">Reduced-base contributions<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Reduced-base contributions – in Polish: składki od obniżonej podstawy – is an incentive for new businesses. An entrepreneur pays reduced social security contributions for a fixed period.</span></a>.
+When you start your business activity, you can either apply for Incentive for New Business, or for Reduced-base contributions.
 If you want to use the Reduced-base contributions after you have used your Incentive for New Business, you need to file the ZUS ZUA form with the Social Security Office. 
 When the 24-month period of the Reduced-base Contribution expires, you will need to file the ZUS ZWUA form with the Social Security Office within 7 days from the end of that period. You will pay standard contributions.
 </p>
-                                            <div class="Action">
-                                                <p style="text-align: justify;" data-mc-autonum="&lt;b&gt;What to do: &lt;/b&gt;"><span class="autonumber"><span><b>What to do: </b></span></span><![CDATA[
+                                            <div class="AFRACTION">
+                                                <p style="text-align: justify;" data-mc-autonum="&lt;b&gt;What to do:&lt;/b&gt;"><span class="autonumber"><span><b>What to do:</b></span></span><![CDATA[
 ]]></p>
                                                 <ol>
-                                                    <li style="text-align: justify;" value="1">Think if you want to benefit from one of the above entitlements.
+                                                    <li style="text-align: justify;" value="1">Think if you want to benefit from one of the above incentives.
 </li>
                                                     <li style="text-align: justify;" value="2">Choose one of them.
 </li>
