--- a/B-What you need to choose/Taxation form.htm
+++ b/B-What you need to choose/Taxation form.htm
@@ -215,8 +215,8 @@
                                         <div role="main" id="mc-main-content">
                                             <h1>Taxation form</h1>
                                             <h2>Available taxation forms</h2>
-                                            <div class="Summary">
-                                                <p data-mc-autonum="&lt;b&gt;In a nutshell: &lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell: </b></span></span> </p>
+                                            <div class="AFRNUTSHELL">
+                                                <p data-mc-autonum="&lt;b&gt;In a nutshell:&lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell:</b></span></span> </p>
                                                 <p>You should choose one of the three available taxation forms for your business.</p>
                                             </div>
                                             <p style="text-align: justify;">When you run a business as a sole trader, you are subject to personal income tax, or PIT.</p>
@@ -319,7 +319,7 @@
                                                             <p class="table-text">4.9%&#160;of revenue</p>
                                                         </td>
                                                         <td class="TableStyle-Alternate-Row-Color-BodyD-Column1-Body1">
-                                                            <p class="table-text">9% of the average salary as published by the Polish Statistical Office</p>
+                                                            <p class="table-text">9% of the average salary as published by Statistics Poland</p>
                                                         </td>
                                                     </tr>
                                                     <tr class="TableStyle-Alternate-Row-Color-Body-Body2">
@@ -446,7 +446,7 @@
                                                     </tr>
                                                     <tr class="TableStyle-Alternate-Row-Color-Body-Body2">
                                                         <td class="TableStyle-Alternate-Row-Color-BodyB-Column1-Body2">
-                                                            <p class="table-text">Form of accounting</p>
+                                                            <p class="table-text">Form of <a href="Accounting.htm">accounting</a></p>
                                                         </td>
                                                         <td class="TableStyle-Alternate-Row-Color-BodyB-Column1-Body2">
                                                             <p class="table-text">PKPiR*)</p>
@@ -455,22 +455,21 @@
                                                             <p class="table-text">PKPiR*)</p>
                                                         </td>
                                                         <td class="TableStyle-Alternate-Row-Color-BodyA-Column1-Body2">
-                                                            <p class="table-text"><a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open MCTextPopupHotSpot_ #text">Revenue register<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Revenue register – it is a register of your revenues, you can keep it on paper or in electronic form, separately for each year</span></a>
-                                                            </p>
+                                                            <p class="table-text">Revenue register</p>
                                                         </td>
                                                     </tr>
                                                 </tbody>
                                             </table>
                                             <p>*)  <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open glossaryTerm MCTextPopupHotSpot_" glossTerm="Glossary.Term10">Podatkowa Księga Przychodów i Rozchodów<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Podatkowa Księga Przychodów i Rozchodów, or PKPIR, is a simplified form of accounting for small businesses. You need to register your revenue and costs only.</span></a>, or PKPIR, is a simplified form of accounting for small businesses. You need to register your revenue and costs only. It should be kept for each year separately, either on paper or in electronic form.</p>
-                                            <p>You can see a template <a href="http://isap.sejm.gov.pl/isap.nsf/DocDetails.xsp?id=WDU20190002544" target="_blank">here.</a></p>
-                                            <div class="Remember">
-                                                <p data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span>&#160;</p>
-                                                <p>Once your annual revenue exceeds EUR 2 million, you are required to maintain full accounting (accounting ledgers)</p>
+                                            <p>Check the <a href="http://isap.sejm.gov.pl/isap.nsf/DocDetails.xsp?id=WDU20190002544" target="_blank">template</a> (in Polish).</p>
+                                            <div class="AFRREMEMBER">
+                                                <p>&#160;</p>
+                                                <p>Once your annual revenue exceeds EUR 2 million, you are required to maintain full <a href="Accounting.htm">accounting</a> (accounting ledgers)</p>
                                             </div>
                                             <p><a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open glossaryTerm MCTextPopupHotSpot_" glossTerm="Glossary.Term11">Revenue register<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Revenue register – it is a register of your revenues, you can keep it on paper or in electronic form, separately for each year</span></a> – is a register of your revenues, you can keep it on paper or in electronic form, separately for each year.</p>
-                                            <p>The template is available <a href="https://isap.sejm.gov.pl/isap.nsf/DocDetails.xsp?id=WDU20210002414&amp;SessionID=2BE7F0DBAE558A65624E78E789E9B29882BBFF14" target="_blank">here</a>.</p>
-                                            <div class="Action">
-                                                <p data-mc-autonum="&lt;b&gt;What to do: &lt;/b&gt;"><span class="autonumber"><span><b>What to do: </b></span></span>&#160;</p>
+                                            <p>Check the <a href="http://isap.sejm.gov.pl/isap.nsf/DocDetails.xsp?id=WDU20190002544" target="_blank">template</a> (in Polish).</p>
+                                            <div class="AFRACTION">
+                                                <p data-mc-autonum="&lt;b&gt;What to do:&lt;/b&gt;"><span class="autonumber"><span><b>What to do:</b></span></span>&#160;</p>
                                                 <ol>
                                                     <li value="1">Choose a taxation form that is best suited to the type and scale of our business and to your current situation.</li>
                                                     <li value="2">Enter your choice in section 15 of your registration application.</li>
