--- a/C-What you need to do/Open a bank account.htm
+++ b/C-What you need to do/Open a bank account.htm
@@ -219,20 +219,16 @@
                                             <h1>Is a bank account required?</h1>
                                             <p style="text-align: justify;">When running your business, you can use either a business bank account, or your private bank account. If you choose the second option, though, you must be the only holder of your private account. 
 </p>
-                                            <p style="text-align: justify;">There are some transactions that must not be settled in cash. In such cases a bank account is required to effect payment. </p>
-                                            <p style="text-align: justify;">A businessperson must not pay in cash, when:
+                                            <p style="text-align: justify;">There are some transactions that must not be settled in cash. In such cases a bank account is required to effect payment. The detailed regulations are set forth in Article 3(1) of <a href="https://isap.sejm.gov.pl/isap.nsf/DocDetails.xsp?id=WDU20160000780" target="_blank">the Act of 13 April 2016 amending the act on personal income tax, the act on corporate tax, and the act freedom of economic activity</a>. </p>
+                                            <p style="text-align: justify;">In short, a businessperson must not pay in cash, when:
 </p>
                                             <ul>
                                                 <li style="text-align: justify;">the transaction is with another business<![CDATA[
 ]]></li>
                                                 <li style="text-align: justify;">a one-off value of the transaction exceeds PLN&#160;15,000, regardless of the number of payments made.</li>
                                             </ul>
-                                            <p style="text-align: justify;">You will need a bank account to pay your taxes and social security contributions.
-</p>
-                                            <div class="Remember">
-                                                <p style="text-align: justify;" data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span>&#160;</p>
-                                                <p style="text-align: justify;">If in at least one year in the last two years you had employed fewer than 10 persons and your annual net revenue has not exceeded EUR&#160;2 million, you do not need a bank account - you can pay your taxes and social security contributions at the post office.</p>
-                                            </div>
+                                            <p style="text-align: justify;">Generally, you will need a bank account to pay your taxes and social security contributions. This requirement does not apply to the so-called micro-businesses. Namely, f in at least one year in the last two years you had employed fewer than 10 persons and your annual net revenue has not exceeded EUR&#160;2 million, you do not need a bank account - you can pay your taxes and social security contributions at the post office.</p>
+                                            <p style="text-align: justify;">&#160;</p>
                                             <p style="text-align: justify;">You will need a business bank account (not your private one), if:
 </p>
                                             <ul>
@@ -241,12 +237,13 @@
 ]]></li>
                                             </ul>
                                             <p style="text-align: justify;">In short, it may be convenient to have a business bank account, even when it is not mandatory.</p>
-                                            <div class="Action">
-                                                <p style="text-align: justify;" data-mc-autonum="&lt;b&gt;What to do: &lt;/b&gt;"><span class="autonumber"><span><b>What to do: </b></span></span>&#160;</p>
+                                            <div class="AFRACTION">
+                                                <p style="text-align: justify;" data-mc-autonum="&lt;b&gt;What to do:&lt;/b&gt;"><span class="autonumber"><span><b>What to do:</b></span></span>&#160;</p>
                                                 <ol>
                                                     <li style="text-align: justify;" value="1">Choose a bank that meets your needs.</li>
-                                                    <li style="text-align: justify;" value="2">Open a business bank account.</li>
-                                                    <li style="text-align: justify;" value="3">Enter your bank account details in section 21 of your registration application.</li>
+                                                    <li style="text-align: justify;" value="2">Consider whether a private bank account will be sufficient for you.</li>
+                                                    <li style="text-align: justify;" value="3">Open a business bank account or a private one.</li>
+                                                    <li style="text-align: justify;" value="4">Enter your bank account details in section 21 of your registration application.</li>
                                                 </ol>
                                             </div>
                                             <p>&#160;</p>
