--- a/Express path/Access to form.htm
+++ b/Express path/Access to form.htm
@@ -219,40 +219,44 @@
                                                     <li>electronically </li>
                                                     <li>on paper</li>
                                                 </ul>
-                                                <p>To access and fill in the registration form electronically, you need to use a method of confirming your identity. </p>
+                                                <p>To access and fill in the registration form electronically, you need to have a method of confirming your identity. </p>
                                                 <p>You can use any of the following methods of confirming your identity:</p>
                                                 <ul>
                                                     <li>profil zaufany (trusted profile)</li>
                                                     <li>e-dowód (Polish e-ID&#160;card)</li>
                                                     <li>a bank account in one of the banks that offer a confirmation of your identity</li>
                                                 </ul>
+                                                <p>If you do not have any of them, you still can click the relevant option .You will be re-directed to a page where you can apply for either a trusted profile, or a Polish e-card.</p>
+                                                <p>&#160;</p>
+                                                <div class="AFREMEMBER">
+                                                    <p data-mc-autonum="&lt;b&gt;Remember:&lt;/b&gt;"><span class="autonumber"><span><b>Remember:</b></span></span>&#160;</p>
+                                                    <p>This is a separate process from registering your business and may take up to 14 days and require a visit to an office or a video conference with an officer. For this reason, it may be simpler and quicker to print the registration form and file it in person.</p>
+                                                </div>
                                                 <div class="MCDropDown MCDropDown_Closed dropDown"><span class="MCDropDownHead dropDownHead"><a href="#" class="MCDropDownHotSpot dropDownHotspot MCDropDownHotSpot_ MCHotSpotImage" aria-expanded="false"><img class="MCDropDown_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" />If you can use one of the above methods of confirming your identity, you can fill in the registration application online. Follow these steps:</a></span>
                                                     <div class="MCDropDownBody dropDownBody">
                                                         <ol>
                                                             <li value="1">Go to website <a href="https://www.biznes.gov.pl/pl" target="_blank">Biznes.gov.pl</a></li>
-                                                            <li value="2">Click the button "Zarejestruj firmę" (Register your business)<br /><img src="../Resources/Images/access1_555x346.png" style="width: 555;height: 346;" /></li>
-                                                            <li value="3">Click the button "Rozpocznij"&#160;(Start)<br /><img src="../Resources/Images/access2_528x256.png" style="width: 528;height: 256;" /></li>
-                                                            <li value="4">You will have two login options:<ul><li>Zaloguj się przez Login.gov.pl (Log in via Login.gov.pl)</li><li>Zaloguj się przez e-mail (Log in using our e-mail) </li></ul></li>
+                                                            <li value="2">Click the button "ZAREJESTRUJ&#160;FIRMĘ" (Register your business)<br /><img src="../Resources/Images/access1_555x346.png" style="width: 555;height: 346;" /></li>
+                                                            <li value="3">Click the button "ROZPOCZNIJ"&#160;(Start)<br /><img src="../Resources/Images/access2_528x256.png" style="width: 528;height: 256;" /></li>
+                                                            <li value="4">You will have two login options:<ul><li>"Zaloguj się przez Login.gov.pl" (Log in via Login.gov.pl)</li><li>"Zaloguj się przez e-mail"&#160;(Log in using our e-mail) </li></ul></li>
                        Choose the one that you want to use.
-                            <img src="../Resources/Images/access3_638x517.png" style="width: 638;height: 517;" /><li value="5">You will be asked to give your e-mail address. Any information from biznes.gov, including a confirmation of submitting your registration application, will be sent to this e-mail address. Give your valid e-email address.</li><li value="6">&#160;You will see this page. It gives you a brief information on how to register a business. It also says that registering a business in Poland is free of charge. Click "Dalej"&#160;(Next).</li></ol>
-                                                        <div class="Remember">
-                                                            <p data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span>&#160;</p>
-                                                            <p> If you are asked to make any payment, beware - you might have been redirected to a fake page.</p>
-                                                        </div>
+                            <img src="../Resources/Images/access3_638x517.png" style="width: 638;height: 517;" /><li value="5">You will be asked to give your e-mail address. Any information from biznes.gov, including a confirmation of submitting your registration application, will be sent to this e-mail address. Give your valid e-email address.</li><li value="6">&#160;You will see this page. It gives you a brief information on how to register a business. It also says that registering a business in Poland is free of charge. Click "DALEJ"&#160;(Next).</li></ol>
                                                         <p>
                                                             <img src="../Resources/Images/access6.png" />
                                                         </p>
-                                                        <p>
-                                                            <br />
-                                                        </p>
                                                         <p>&#160;</p>
-                                                        <p>You have reached the registration form online.</p>
+                                                        <div class="AFREMEMBER">
+                                                            <p data-mc-autonum="&lt;b&gt;Remember:&lt;/b&gt;"><span class="autonumber"><span><b>Remember:</b></span></span>&#160;</p>
+                                                            <p> If you are asked to make any payment, beware - you might have been redirected to a fake page.</p>
+                                                        </div>
+                                                        <p>&#160;</p>
+                                                        <p>You have reached the registration form online. Fill it in using the guidelines in section <a href="Fill in form.htm">How to fill in the form</a>.</p>
                                                     </div>
                                                 </div>
                                                 <div class="MCDropDown MCDropDown_Closed dropDown"><span class="MCDropDownHead dropDownHead"><a href="#" class="MCDropDownHotSpot dropDownHotspot MCDropDownHotSpot_ MCHotSpotImage" aria-expanded="false"><img class="MCDropDown_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" />If you do not have any of the above methods of confirming your identity, you will need to prepare a paper version of your application. Follow these steps:</a></span>
                                                     <div class="MCDropDownBody dropDownBody">
                                                         <ol>
-                                                            <li value="1">Go to this <a href="https://zaplecze.biznes.gov.pl/files/document_attachments/2202/CEIDG1_v_211.pdf">page</a></li>
+                                                            <li value="1">Go to <a href="https://zaplecze.biznes.gov.pl/files/document_attachments/2202/CEIDG1_v_211.pdf" target="_blank">CEIDG&#160;page</a></li>
                                                             <li value="2">Download the form to your computer and save it.</li>
                                                             <li value="3">Then you can either:</li>
                                                         </ol>
@@ -260,9 +264,11 @@
                                                             <li>print the form and fill it in with a pen</li>
                                                             <li>fill it in the Acrobat, using the "Fill in and sign" function. Then print it. </li>
                                                         </ul>
-                                                        <div class="Remember">
-                                                            <p data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span>&#160;</p>
-                                                            <p>Do not sign it yet!&#160;You will need it to sign it in the presence of an officer.</p>
+                                                        <p>If you do not have Adobe Acrobat Reader, you can download it from the <a href="https://get.adobe.com/pl/reader/" target="_blank">product website</a>.</p>
+                                                        <p>Read the detailed <a href="Fill in form.htm">guide</a> on how to fill in individual fields.</p>
+                                                        <div class="AFREMEMBER">
+                                                            <p data-mc-autonum="&lt;b&gt;Remember:&lt;/b&gt;"><span class="autonumber"><span><b>Remember:</b></span></span>&#160;</p>
+                                                            <p>Do not sign the form yet!&#160;You will need it to sign it in the presence of an officer.</p>
                                                         </div>
                                                     </div>
                                                 </div>
