--- a/Express path/Fill in form.htm
+++ b/Express path/Fill in form.htm
@@ -225,7 +225,7 @@
                                                 <div class="MCDropDownBody dropDownBody">
                                                     <p style="text-align: justify;">If you are a foreigner, you can use such identity documents as a passport, a temporary ID card, a temporary proof of identity, an identity document issued in your country of origin, a permanent residence card, a temporary residence card. </p>
                                                     <p style="text-align: justify;">In section 2.2, give the details of your identity document:&#160;its number, the name of the body that issued it, the date of issue.</p>
-                                                    <p style="text-align: justify;">You can read more about a foreigner status <a href="../A-What you need to know/Who can be a sole trader.htm">here</a>. </p>
+                                                    <p style="text-align: justify;">You can read more in the chapter about  <a href="../A-What you need to know/Who can be a sole trader.htm" target="_blank">Foreigner status</a>. </p>
                                                     <p>
                                                         <img src="../Resources/Images/section 2.png" />
                                                     </p>
@@ -240,8 +240,8 @@
                                             </div>
                                             <div class="MCDropDown MCDropDown_Closed dropDown"><span class="MCDropDownHead dropDownHead"><a href="#" class="MCDropDownHotSpot dropDownHotspot MCDropDownHotSpot_ MCHotSpotImage" aria-expanded="false"><img class="MCDropDown_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" />Fill in section 5 of the registration form - name of your business. </a></span>
                                                 <div class="MCDropDownBody dropDownBody">
-                                                    <p>How to choose a name for your business - read <a href="../B-What you need to choose/Name for your business.htm">here</a>.</p>
-                                                    <p>How to choose PKD&#160;code(s) for your business - read <a href="../B-What you need to choose/PKD code.htm">here</a>.</p>
+                                                    <p>How to choose a name for your business - read chapter <a href="../B-What you need to choose/Name for your business.htm" target="_blank">Name for your business</a>.</p>
+                                                    <p>How to choose PKD&#160;code(s) for your business - read chapter on <a href="../B-What you need to choose/PKD code.htm" target="_blank">PKD&#160;codes</a>.</p>
                                                     <p>
                                                         <img src="../Resources/Images/section 5.png" />
                                                     </p>
@@ -256,7 +256,7 @@
                                             </div>
                                             <div class="MCDropDown MCDropDown_Closed dropDown"><span class="MCDropDownHead dropDownHead"><a href="#" class="MCDropDownHotSpot dropDownHotspot MCDropDownHotSpot_ MCHotSpotImage" aria-expanded="false"><img class="MCDropDown_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" />Fill in section 7 of the registration form - the place where you will conduct your business </a></span>
                                                 <div class="MCDropDownBody dropDownBody">
-                                                    <p>Which address to choose - read more <a href="../B-What you need to choose/Business address.htm">here</a>.</p>
+                                                    <p>Which address to choose - read more in chapter on <a href="../B-What you need to choose/Business address.htm" target="_blank">Business address</a>.</p>
                                                     <p>
                                                         <img src="../Resources/Images/section 7.png" />
                                                     </p>
@@ -264,7 +264,7 @@
                                             </div>
                                             <div class="MCDropDown MCDropDown_Closed dropDown"><span class="MCDropDownHead dropDownHead"><a href="#" class="MCDropDownHotSpot dropDownHotspot MCDropDownHotSpot_ MCHotSpotImage" aria-expanded="false"><img class="MCDropDown_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" />Fill in section 8 of the registration form - additional place of business</a></span>
                                                 <div class="MCDropDownBody dropDownBody">
-                                                    <p>What is an additional place of business?&#160;Read <a href="../B-What you need to choose/Business address.htm">here</a>.</p>
+                                                    <p>What is an additional place of business?&#160;Read the chapter <a href="../B-What you need to choose/Business address.htm" target="_blank">Business address</a>.</p>
                                                     <p>
                                                         <img src="../Resources/Images/section 8.png" />
                                                     </p>
@@ -278,7 +278,7 @@
                                                         <li>you have social security insurance in another country - check the third box</li>
                                                     </ul>
                                                     <p>Then, depending on your choice, you will need to complete the other sections.</p>
-                                                    <p>Read more about social security <a href="../B-What you need to choose/Social  security status.htm">here</a>.</p>
+                                                    <p>Read more about <a href="../B-What you need to choose/Social  security status.htm" target="_blank">social security</a>.</p>
                                                     <p>
                                                         <img src="../Resources/Images/section 9.png" />
                                                     </p>
@@ -289,7 +289,7 @@
                                                     <p>By checking this box you confirm that:</p>
                                                     <ul>
                                                         <li>you are not subject to prohibition to conduct business</li>
-                                                        <li>you have a relevant legal title to the property whose address is given in section 9. What legal title is required?&#160;Read more <a href="../A-What you need to know/Who can be a sole trader.htm">here</a>.</li>
+                                                        <li>you have a relevant legal title to the property whose address is given in section 9. What legal title is required?&#160;You will find the information in chapter <a href="../A-What you need to know/Who can be a sole trader.htm" target="_blank">Who can be a sole trader</a>.</li>
                                                     </ul>
                                                     <p>
                                                         <img src="../Resources/Images/section 10.png" />
@@ -307,7 +307,7 @@
                                             <div class="MCDropDown MCDropDown_Closed dropDown"><span class="MCDropDownHead dropDownHead"><a href="#" class="MCDropDownHotSpot dropDownHotspot MCDropDownHotSpot_ MCHotSpotImage" aria-expanded="false"><img class="MCDropDown_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" />Fill in sections 14 and 15 of the registration form - your tax office and the taxation form</a></span>
                                                 <div class="MCDropDownBody dropDownBody">
                                                     <p>Give the name of the tax office - this is the tax office proper for your residence address in Poland.</p>
-                                                    <p>Choose the taxation form by checking the relevant box. Read more about taxation forms <a href="../B-What you need to choose/Taxation form.htm">here</a>.</p>
+                                                    <p>Choose the taxation form by checking the relevant box. Read more about <a href="../B-What you need to choose/Taxation form.htm" target="_blank">taxation forms</a>.</p>
                                                     <p>
                                                         <img src="../Resources/Images/section 14 15.png" />
                                                     </p>
@@ -315,8 +315,8 @@
                                             </div>
                                             <div class="MCDropDown MCDropDown_Closed dropDown"><span class="MCDropDownHead dropDownHead"><a href="#" class="MCDropDownHotSpot dropDownHotspot MCDropDownHotSpot_ MCHotSpotImage" aria-expanded="false"><img class="MCDropDown_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" />Fill in sections 16, 17 18 and 19 of the registration form - information about your accounting</a></span>
                                                 <div class="MCDropDownBody dropDownBody">
-                                                    <p style="text-align: justify;">Check the box in section 16, if you plan to keep full accounting next year. Read more <a href="../B-What you need to choose/Taxation form.htm">here</a>.</p>
-                                                    <p style="text-align: justify;">In section 17, indicate who will keep your accounting - you or a hired accountant. Read more <a href="../B-What you need to choose/Accounting.htm">here</a>.</p>
+                                                    <p style="text-align: justify;">Check the box in section 16, if you plan to keep full accounting next year. Read more in chapter on <a href="../B-What you need to choose/Accounting.htm" target="_blank">Accounting</a>.</p>
+                                                    <p style="text-align: justify;">In section 17, indicate who will keep your accounting - you or a hired accountant. Read more n chapter on <a href="../B-What you need to choose/Accounting.htm" target="_blank">Accounting</a>.</p>
                                                     <p style="text-align: justify;">In section 18, the box "YES" is for a protected employment establishment employing persons with disabilities. Choose "NO" - you can run a protected employment establishment only if you have been operating for at least 12 months.</p>
                                                     <p style="text-align: justify;">In section 19, give the address of the place where your accounting documentation will be kept. Depending on your choice in section 17, it will be either your address or your accountant's address.</p>
                                                     <p>
@@ -336,7 +336,7 @@
                                             <div class="MCDropDown MCDropDown_Closed dropDown"><span class="MCDropDownHead dropDownHead"><a href="#" class="MCDropDownHotSpot dropDownHotspot MCDropDownHotSpot_ MCHotSpotImage" aria-expanded="false"><img class="MCDropDown_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" />Fill in section 21 of the registration form - information about your bank account</a></span>
                                                 <div class="MCDropDownBody dropDownBody">
                                                     <p>Enter your business bank account number, if you have a business bank account. </p>
-                                                    <p>If not, give your private bank account number. Read more about a bank account <a href="../C-What you need to do/Open a bank account.htm">here</a>.</p>
+                                                    <p>If not, give your private bank account number. Read more about a <a href="../C-What you need to do/Open a bank account.htm" target="_blank">bank account</a>.</p>
                                                     <p>
                                                         <img src="../Resources/Images/section 21.png" />
                                                     </p>
@@ -370,7 +370,7 @@
                                             </div>
                                             <div class="MCDropDown MCDropDown_Closed dropDown"><span class="MCDropDownHead dropDownHead"><a href="#" class="MCDropDownHotSpot dropDownHotspot MCDropDownHotSpot_ MCHotSpotImage" aria-expanded="false"><img class="MCDropDown_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" />Fill in section 28 of the registration form - GDPR&#160;information</a></span>
                                                 <div class="MCDropDownBody dropDownBody">
-                                                    <p>This section contains information on the processing of your personal data in <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open MCTextPopupHotSpot_ #text">CEIDG<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Centralna Informacja i Ewidencja Działalności Gospodarczej – the Central Register and Information on Economic Activity – is the Polish office run by the minister in charge of economic matters, where sole traderships and civil-law partnerships are registered</span></a>.</p>
+                                                    <p>This section contains information on the processing of your personal data in CEIDG.</p>
                                                     <p>You should sign and date the application.</p>
                                                     <p>
                                                         <img src="../Resources/Images/section 28.png" />
@@ -378,8 +378,8 @@
                                                 </div>
                                             </div>
                                             <p>This is the end of your registration application.</p>
-                                            <p>If your are completing it online, click "Złóż"&#160;(Submit).</p>
-                                            <p>If you are filling it in on paper, print it. Do not sign it yet. Then send it or file it in person. See <a href="../C-What you need to do/File an application.htm">here</a> for details.</p>
+                                            <p>If your are completing it online, click "ZŁÓŻ"&#160;(Submit).</p>
+                                            <p>If you are filling it in on paper, print it. Do not sign it yet. Then send it or file it in person. See <a href="../C-What you need to do/File an application.htm" target="_blank">the section on how to file your application</a> for details.</p>
                                             <p>&#160;</p>
                                         </div>
                                     </div>
