--- a/References.htm
+++ b/References.htm
@@ -230,6 +230,10 @@
                                                     <p><a href="https://isap.sejm.gov.pl/isap.nsf/DocDetails.xsp?id=wdu20040540535" target="_blank">The Act of 11 March 2004 on the tax on goods and services</a>
                                                     </p>
                                                 </li>
+                                                <li value="7">
+                                                    <p><a href="https://isap.sejm.gov.pl/isap.nsf/DocDetails.xsp?id=wdu20041731807" target="_blank">The Act of 13 April 2016 amending the act on personal income tax, the act on corporate tax, and the act freedom of economic activity</a>
+                                                    </p>
+                                                </li>
                                             </ol>
                                         </div>
                                     </div>
