--- a/Who is this guide for.htm
+++ b/Who is this guide for.htm
@@ -56,6 +56,7 @@
 }
 
 </style>
+        <link href="Resources/Stylesheets/Alternate-Row-Color.css" rel="stylesheet" data-mc-stylesheet-type="table" />
         <script src="Resources/Scripts/jquery.min.js" type="text/javascript">
         </script>
         <script src="Resources/Scripts/purify.min.js" type="text/javascript" defer="defer">
@@ -213,14 +214,44 @@
                                         </div>
                                         <div role="main" id="mc-main-content">
                                             <h1>Who is this guide for</h1>
-                                            <div class="Summary">
-                                                <p data-mc-autonum="&lt;b&gt;In a nutshell: &lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell: </b></span></span>&#160;</p>
-                                                <p>This guide is for you, if you are staying in Poland and have been granted a right to a legal stay here. It includes citizens of EU and EEA member states, citizens of the US&#160;and Switzerland, and citizens of other countries, if they have a status listed below.</p>
+                                            <div class="AFRNUTSHELL">
+                                                <p data-mc-autonum="&lt;b&gt;In a nutshell:&lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell:</b></span></span>&#160;</p>
+                                                <p>This guide is for you, if you are staying in Poland and have been granted a right to a legal stay here. It includes citizens of EU and EEA member states, citizens of the US&#160;and Switzerland, and citizens of other countries, if they have a status mentioned in this chapter.</p>
                                             </div>
                                             <p><![CDATA[	]]></p>
-                                            <p style="text-align: justify;">If your legal situation is regulated and you have an idea for business, it might be a good idea to start your own business . The process of registering business activity is fairly simple.&#160;This guide contains the necessary information and will help you to complete the required form. Ideally, you should be able to complete the process on your own and without any knowledge of Polish. It may happen, though, that depending on the type of your business, you will need to consult some rather complicated legal acts that are available in Polish only. In such a situation, ask your Polish speaking friend. This guide will tell you which part of which act you should consult, so will only need some little help with translating. </p>
+                                            <p style="text-align: justify;">If your legal situation is regulated and you have an idea for business, it might be a good idea to start your own business . The process of registering business activity is fairly simple.&#160;This guide contains the necessary information and will help you to complete the required form. Ideally, you should be able to complete the process on your own and without any knowledge of Polish. It may happen, though, that depending on the type of your business, you will need to consult some legal acts that are available in Polish only. In such a situation, ask your Polish-speaking friend. When the situation may have legal or financial implications, you may need to consult a lawyer or an accountant. This guide will tell you which part of which act you should consult, so you will only need a small piece of content translated.</p>
                                             <p class="printonlyheading">Good luck with your new business!&#160;</p>
-                                            <h3>Citizens of other countries</h3>
+                                            <p>You do not need to be a Polish citizen to start a business as a sole trader. The exact requirements depend on your country of origin. See the information in the table below.</p>
+                                            <table style="width: 100%;mc-table-style: url('Resources/Stylesheets/Alternate-Row-Color.css');" class="TableStyle-Alternate-Row-Color" cellspacing="21">
+                                                <col class="TableStyle-Alternate-Row-Color-Column-Column1" style="width: 290px;" />
+                                                <col class="TableStyle-Alternate-Row-Color-Column-Column1" />
+                                                <thead>
+                                                    <tr class="TableStyle-Alternate-Row-Color-Head-Header1">
+                                                        <th class="TableStyle-Alternate-Row-Color-HeadE-Column1-Header1">
+                                                            <p>If you are a citizen of:</p>
+                                                        </th>
+                                                        <th class="TableStyle-Alternate-Row-Color-HeadD-Column1-Header1">&#160;</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr class="TableStyle-Alternate-Row-Color-Body-Body1">
+                                                        <td class="TableStyle-Alternate-Row-Color-BodyE-Column1-Body1">A EU or EEA*) member state	</td>
+                                                        <td class="TableStyle-Alternate-Row-Color-BodyD-Column1-Body1">You can start your business activity in the same way as a Polish citizen</td>
+                                                    </tr>
+                                                    <tr class="TableStyle-Alternate-Row-Color-Body-Body2">
+                                                        <td class="TableStyle-Alternate-Row-Color-BodyE-Column1-Body2">US or Switzerland</td>
+                                                        <td class="TableStyle-Alternate-Row-Color-BodyD-Column1-Body2">You can start your business activity in the same way as a Polish citizen</td>
+                                                    </tr>
+                                                    <tr class="TableStyle-Alternate-Row-Color-Body-Body1">
+                                                        <td class="TableStyle-Alternate-Row-Color-BodyB-Column1-Body1">Any other country	</td>
+                                                        <td class="TableStyle-Alternate-Row-Color-BodyA-Column1-Body1">You need a residency title to start business activity. See the <a href="#Citizens" target="_blank">section</a> below for details</td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+                                            <p><![CDATA[	]]></p>
+                                            <p>*)&#160;The European Economic Area members are:&#160;the EU&#160;member states and Norway, Iceland, and Liechtenstein</p>
+                                            <p>&#160;</p>
+                                            <h3><a name="Citizens"></a>Citizens of other countries</h3>
                                             <p style="text-align: justify;">You need to have a residency title giving you the right to conduct a business activity in Poland. The relevant titles are listed in Article 4 sec. 2, 4 i 5 of <a href="https://isap.sejm.gov.pl/isap.nsf/DocDetails.xsp?id=WDU20180000649" target="_blank">the Act of 6 March 2018 on the principles of participation of foreign entrepreneurs and other foreign persons in business transactions in the Republic of Poland.</a></p>
                                             <p>These <a name="residency_title"></a>titles are:</p>
                                             <ol style="list-style-type: upper-roman;">
@@ -236,11 +267,11 @@
                                                 <li value="5">Having applied for a permit for a temporary or permanent stay – until a decision issued becomes final and binding.</li>
                                             </ol>
                                             <p>&#160;</p>
-                                            <div class="Action">
-                                                <p data-mc-autonum="&lt;b&gt;What to do: &lt;/b&gt;"><span class="autonumber"><span><b>What to do: </b></span></span>&#160;</p>
+                                            <div class="AFRACTION">
+                                                <p data-mc-autonum="&lt;b&gt;What to do:&lt;/b&gt;"><span class="autonumber"><span><b>What to do:</b></span></span>&#160;</p>
                                                 <ol>
                                                     <li value="1">Check whether you have a status indicated above.</li>
-                                                    <li value="2">Read section <a href="A-What you need to know/Who can be a sole trader.htm">Who can be a sole trader</a> of this guide.</li>
+                                                    <li value="2">Read the chapter <a href="A-What you need to know/Who can be a sole trader.htm">Who can be a sole trader</a> .</li>
                                                 </ol>
                                             </div>
                                         </div>
