--- a/A-What you need to know/Who can be a sole trader.htm
+++ b/A-What you need to know/Who can be a sole trader.htm
@@ -214,8 +214,8 @@
                                         </div>
                                         <div role="main" id="mc-main-content">
                                             <h1>Who can be a sole trader</h1>
-                                            <div class="Summary">
-                                                <p data-mc-autonum="&lt;b&gt;In a nutshell: &lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell: </b></span></span>&#160;</p>
+                                            <div class="AFRNUTSHELL">
+                                                <p data-mc-autonum="&lt;b&gt;In a nutshell:&lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell:</b></span></span>&#160;</p>
                                                 <p>Essentially, every individual can start a business</p>
                                             </div>
                                             <h2>Freedom of business activity</h2>
@@ -229,8 +229,8 @@
                                             </ul>
                                             <h2>Special cases</h2>
                                             <h3>A foreigner</h3>
-                                            <div class="Summary">
-                                                <p data-mc-autonum="&lt;b&gt;In a nutshell: &lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell: </b></span></span>&#160;</p>
+                                            <div class="AFRNUTSHELL">
+                                                <p data-mc-autonum="&lt;b&gt;In a nutshell:&lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell:</b></span></span>&#160;</p>
                                                 <p>A foreigner can run a business in Poland. Depending on their country of origin, though, certain conditions need to be met.</p>
                                             </div>
                                             <p>You do not need to be a Polish citizen to start a business as a sole trader. The exact requirements depend on your country of origin. See the information in the table below.</p>
@@ -256,18 +256,18 @@
                                                     </tr>
                                                     <tr class="TableStyle-Alternate-Row-Color-Body-Body1">
                                                         <td class="TableStyle-Alternate-Row-Color-BodyB-Column1-Body1">Any other country	</td>
-                                                        <td class="TableStyle-Alternate-Row-Color-BodyA-Column1-Body1">You need a residency title to start business activity. See below for details</td>
+                                                        <td class="TableStyle-Alternate-Row-Color-BodyA-Column1-Body1">You need a residency title to start business activity. See this <a href="#Citizens" target="_blank">section</a> for details</td>
                                                     </tr>
                                                 </tbody>
                                             </table>
                                             <p><![CDATA[	]]></p>
                                             <p>*)&#160;The European Economic Area members are:&#160;the EU&#160;member states and Norway, Iceland, and Liechtenstein</p>
-                                            <h3>Citizens of other countries</h3>
+                                            <h3><a name="Citizens"></a>Citizens of other countries</h3>
                                             <p style="text-align: justify;">Citizens of countries not being members of the EU or of the European Economic Area can start and run a business in Poland on the same terms as Polish citizens, if they have a residency title giving such right. The relevant titles are listed in Article 4 sec. 2, 4 i 5 of <a href="https://isap.sejm.gov.pl/isap.nsf/DocDetails.xsp?id=WDU20180000649" target="_blank">the Act of 6 March 2018 on the principles of participation of foreign entrepreneurs and other foreign persons in business transactions in the Republic of Poland.</a></p>
-                                            <p style="text-align: justify;">Consult the list of the relevant residency titles <a href="../Who is this guide for.htm">here</a>.</p>
+                                            <p style="text-align: justify;">Consult the <a href="#Citizens">list of the relevant residency titles</a>.</p>
                                             <p>&#160;</p>
-                                            <div class="Action">
-                                                <p data-mc-autonum="&lt;b&gt;What to do: &lt;/b&gt;"><span class="autonumber"><span><b>What to do: </b></span></span>&#160;</p>
+                                            <div class="AFRACTION">
+                                                <p data-mc-autonum="&lt;b&gt;What to do:&lt;/b&gt;"><span class="autonumber"><span><b>What to do:</b></span></span>&#160;</p>
                                                 <ol>
                                                     <li value="1">Check the conditions that apply to you.</li>
                                                     <li value="2">Prepare the required document(s). </li>
@@ -276,22 +276,22 @@
                                             </div>
                                             <h3>&#160;</h3>
                                             <h3>A minor</h3>
-                                            <div class="Summary">
-                                                <p data-mc-autonum="&lt;b&gt;In a nutshell: &lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell: </b></span></span> </p>
-                                                <p>If you are a <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open MCTextPopupHotSpot_ #text">minor<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>A person under 18 years of age</span></a>, you will need one of your parents to represent you.</p>
+                                            <div class="AFRNUTSHELL">
+                                                <p data-mc-autonum="&lt;b&gt;In a nutshell:&lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell:</b></span></span> </p>
+                                                <p>If you are a minor, you will need one of your parents to represent you.</p>
                                             </div>
                                             <p>You can start a business in Poland even if you are a <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open glossaryTerm MCTextPopupHotSpot_" glossTerm="Glossary.Term4">minor<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>A person under 18 years of age</span></a> (you are not 18 years old yet).]</p>
                                             <p style="text-align: justify;">If this is the case, though, you will need to obtain consent or your legal representative (most often your parent or guardian).</p>
                                             <p style="text-align: justify;">As a rule, any parent can represent a child individually. This rule does not apply, though, when one of the parents objected to such representation.</p>
-                                            <p style="text-align: justify;">Only your parent can register your business on your behalf with <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open MCTextPopupHotSpot_ #text" style="text-align: justify;">CEIDG<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Centralna Informacja i Ewidencja Działalności Gospodarczej – the Central Register and Information on Economic Activity – is the Polish office run by the minister in charge of economic matters, where sole traderships and civil-law partnerships are registered</span></a>. It must be done in person – your parent will need to file a paper application with the local community office.</p>
+                                            <p style="text-align: justify;">Only your parent can register your business on your behalf with CEIDG. It must be done in person – your parent will need to file a paper application with the local community office.</p>
                                             <p style="text-align: justify;">CEIDG will verify such an application – this means that the procedure may take longer. Besides, if there are any doubts as to the person of the representative, the office can refuse the registration.</p>
                                             <p style="text-align: justify;">In a special case, where you have the consent of a court to open a business, additional verification by CEIDG will not be required.</p>
                                             <p style="text-align: justify;">You will be able to run your business without your parent’s representation when you come of age (you reach the age of 18).</p>
                                             <h3>&#160;</h3>
                                             <h3>An old age pensioner</h3>
-                                            <div class="Summary">
-                                                <p data-mc-autonum="&lt;b&gt;In a nutshell: &lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell: </b></span></span>&#160;</p>
-                                                <p>If you run a business as a retired person, your pension entitlement will be reduced only if you benefit from an <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open MCTextPopupHotSpot_ #text">early retirement<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Early retirement – an old-age entitlement for persons born between 1949 and 1968, who worked under special conditions or performed a specific type of work</span></a>.</p>
+                                            <div class="AFRNUTSHELL">
+                                                <p data-mc-autonum="&lt;b&gt;In a nutshell:&lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell:</b></span></span>&#160;</p>
+                                                <p>If you run a business as a retired person, your pension entitlement will be reduced only if you benefit from an early retirement.</p>
                                             </div>
                                             <p>A woman can retire at the age of 60, a man – at the age of 65.</p>
                                             <p>As an old-age pensioner, you can:</p>
