--- a/B-What you need to choose/PKD code.htm
+++ b/B-What you need to choose/PKD code.htm
@@ -213,28 +213,28 @@
                                         </div>
                                         <div role="main" id="mc-main-content">
                                             <h1>PKD&#160;code</h1>
-                                            <div class="Summary">
-                                                <p data-mc-autonum="&lt;b&gt;In a nutshell: &lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell: </b></span></span> </p>
+                                            <div class="AFRNUTSHELL">
+                                                <p data-mc-autonum="&lt;b&gt;In a nutshell:&lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell:</b></span></span> </p>
                                                 <p style="text-align: justify;">You must choose a major code describing your core business. You can also choose several additional codes</p>
                                             </div>
                                             <p style="text-align: justify;">When registering your business, you will need to choose at least one code of business activity according to <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open glossaryTerm MCTextPopupHotSpot_" glossTerm="Glossary.Term6">Polska Klasyfikacja Działalności<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Polska Klasyfikacja Działalności, or PKD,  is a Polish system of business activity classification corresponding to the NACE used in the UE.</span></a>, or PKD.</p>
                                             <p style="text-align: justify;">The codes are used for statistical purposes, but they also have some practical significance. They are associated with specific forms of taxation, VAT requirement, or the requirement to use a fiscal register.</p>
                                             <p style="text-align: justify;">You should choose one main code for your business activity, describing your main business area that will generate the majority of your revenues.</p>
                                             <p style="text-align: justify;">Additionally, you can choose as many additional codes as you want. These will correspond to the activities that you perform, but are not your major activity.</p>
-                                            <div class="Example">
-                                                <p style="text-align: justify;" data-mc-autonum="&lt;b&gt;Example: &lt;/b&gt;"><span class="autonumber"><span><b>Example: </b></span></span>&#160;</p>
+                                            <div class="AFREXAMPLE">
+                                                <p style="text-align: justify;" data-mc-autonum="&lt;b&gt;Example:&lt;/b&gt;"><span class="autonumber"><span><b>Example:</b></span></span>&#160;</p>
                                                 <p style="text-align: justify;">If our main business is photography, your main code will be <b>PKD 74.20.Z	Działalność fotograficzna</b>. Additionally, you might want to choose such codes as "PKD 18.13.Z - Działalność usługowa związana z przygotowywaniem do druku" or "PKD 59.11.Z	Działalność związana z produkcją filmów, nagrań wideo i programów telewizyjnych".</p>
                                             </div>
                                             <p style="text-align: justify;">Do not register too many codes „just in case”. If you want to expand your business, you can always add a new code or codes to your registration.</p>
-                                            <p style="text-align: justify;">If you change the scope or nature of your business, you are required to update the codes within 7 days of such change. See here for details.</p>
-                                            <div class="Remember">
-                                                <p style="text-align: justify;" data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span> </p>
+                                            <p style="text-align: justify;">If you change the scope or nature of your business, you are required to update the codes within 7 days of such change. .</p>
+                                            <div class="AFREMEMBER">
+                                                <p style="text-align: justify;" data-mc-autonum="&lt;b&gt;Remember:&lt;/b&gt;"><span class="autonumber"><span><b>Remember:</b></span></span> </p>
                                                 <p style="text-align: justify;">Certain codes are reserved for individual farmers or for commercial law companies, and you cannot choose them. Always check the <a href="https://www.biznes.gov.pl/pl/tabela-pkd" target="_blank">PKD website</a>.</p>
                                             </div>
                                             <h2>Where to find the codes</h2>
-                                            <p style="text-align: justify;">Use the search page available at&#160;<a href="https://www.biznes.gov.pl/pl/tabela-pkd">Biznes.gov.pl</a></p>
+                                            <p style="text-align: justify;">Use the search function available at the <a href="https://www.biznes.gov.pl/pl/tabela-pkd" target="_blank">PKD website.</a></p>
                                             <p style="text-align: justify;">You will find there a five-tier register – first you choose one general area, and then – more detailed sections, groups and classes.</p>
-                                            <p style="text-align: justify;">If you cannot find the appropriate code for your business, use  <a href="https://lodz.stat.gov.pl/osrodki/osrodek-klasyfikacji-i-nomenklatur-urzedu-statystycznego-w-lodzi/formularz" target="_blank">this form</a> to contact Ośrodek Klasyfikacji i Nomenklatur Urzędu Statystycznego w Łodzi. If you describe the nature of your business, an officer will help you select the appropriate code.</p>
+                                            <p style="text-align: justify;">If you cannot find the appropriate code for your business, use  <a href="https://lodz.stat.gov.pl/osrodki/osrodek-klasyfikacji-i-nomenklatur-urzedu-statystycznego-w-lodzi/formularz" target="_blank">a contact form</a> (in Polish ) to write to Ośrodek Klasyfikacji i Nomenklatur Urzędu Statystycznego w Łodzi. If you describe the nature of your business, an officer will help you select the appropriate code. The form is available in Polish only, so you might need help from a Polish-speaking friend.</p>
                                             <h2>How to change a code/add a new code</h2>
                                             <p style="text-align: justify;">At any time, you can register any of the following changes:</p>
                                             <ul>
@@ -242,13 +242,13 @@
                                                 <li style="text-align: justify;">extend the scope of your business – add new PKD codes for new activities</li>
                                                 <li style="text-align: justify;">update the scope of your business – delete the PKD codes for the activities that you no longer perform</li>
                                             </ul>
-                                            <div class="Remember">
-                                                <p style="text-align: justify;" data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span> </p>
+                                            <div class="AFREMEMBER">
+                                                <p style="text-align: justify;" data-mc-autonum="&lt;b&gt;Remember:&lt;/b&gt;"><span class="autonumber"><span><b>Remember:</b></span></span> </p>
                                                 <p style="text-align: justify;">If your activity is a regulated activity or requires a licence or a permit, you are required to notify any change of the PKD codes to the authority that issued the relevant permit or licence. You should do this within 7 days of the date of the change.</p>
                                             </div>
                                             <p style="text-align: justify;">&#160;</p>
-                                            <div class="Action">
-                                                <p style="text-align: justify;" data-mc-autonum="&lt;b&gt;What to do: &lt;/b&gt;"><span class="autonumber"><span><b>What to do: </b></span></span>&#160;</p>
+                                            <div class="AFRACTION">
+                                                <p style="text-align: justify;" data-mc-autonum="&lt;b&gt;What to do:&lt;/b&gt;"><span class="autonumber"><span><b>What to do:</b></span></span>&#160;</p>
                                                 <ol>
                                                     <li style="text-align: justify;" value="1">Consult the PKD website</li>
                                                     <li style="text-align: justify;" value="2">Choose one major code for your business,</li>
