--- a/B-What you need to choose/VAT.htm
+++ b/B-What you need to choose/VAT.htm
@@ -213,13 +213,13 @@
                                         </div>
                                         <div role="main" id="mc-main-content">
                                             <h1>To be or not to be a VAT&#160;payer</h1>
-                                            <div class="Summary">
-                                                <p class="Akapitzlistą_1" style="font-weight: normal;font-size: 12pt;" data-mc-autonum="&lt;b&gt;In a nutshell: &lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell: </b></span></span>&#160;</p>
+                                            <div class="AFRNUTSHELL">
+                                                <p class="Akapitzlistą_1" style="font-weight: normal;font-size: 12pt;" data-mc-autonum="&lt;b&gt;In a nutshell:&lt;/b&gt;"><span class="autonumber"><span><b>In a nutshell:</b></span></span>&#160;</p>
                                                 <p class="Akapitzlistą_1" style="font-weight: normal;font-size: 12pt;">You need to check whether you are required to register as a VAT payer. If you are not, you can still choose a voluntary VAT registration.</p>
                                             </div>
-                                            <p class="Akapitzlistą_3" style="text-align: justify;">VAT is added to the price of a product or a service. It is due irrespective of your income tax and regardless of the taxation form that you chose. As a rule, a business should be registered for VAT.</p>
+                                            <p class="Akapitzlistą_3" style="text-align: justify;"><a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open glossaryTerm MCTextPopupHotSpot_" glossTerm="Glossary.Term13">VAT<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Value Added Tax. In Polad, it is often called the tax on goods and services.</span></a>, the Value Added Tax, or the tax on goods and services, is added to the price of a product or a service. It is due irrespective of your income tax and regardless of the taxation form that you chose. As a rule, a business should be registered for VAT.</p>
                                             <p class="Akapitzlistą_3" style="text-align: justify;">&#160;</p>
-                                            <p class="Akapitzlistą_3" style="text-align: justify;">You must be a VAT payer, if you sell the following types of products or services:</p>
+                                            <p class="Akapitzlistą_3" style="text-align: justify;">You must be a VAT payer, if you sell the following types of products or services, as regulated by the <a href="https://isap.sejm.gov.pl/isap.nsf/DocDetails.xsp?id=WDU20040540535" target="_blank">VAT&#160;Act</a>.</p>
                                             <p class="Akapitzlistą_1" style="text-align: justify;">Goods:</p>
                                             <ul>
                                                 <li style="text-align: justify;">goods listed in Annex 12 to the VAT Act (e.g. precious metals and their scrap, jewelry)</li>
@@ -248,8 +248,8 @@
                                                     <p class="Akapitzlistą_7" style="text-align: justify;">If you are starting a business, you do not have any sales yet, so you do not need to register for VAT. </p>
                                                     <p class="Akapitzlistą_7" style="text-align: justify;">Once you start business, you need to monitor your sales, to be aware of when the limit is exceeded. Then you will be required to register for VAT. </p>
                                                     <p class="Akapitzlistą_7" style="text-align: justify;">The above limit is an annual one. If you start your business in mid-year, it shall be calculated proportionally. </p>
-                                                    <div class="Example">
-                                                        <p class="Akapitzlistą_7" style="text-align: justify;" data-mc-autonum="&lt;b&gt;Example: &lt;/b&gt;"><span class="autonumber"><span><b>Example: </b></span></span> </p>
+                                                    <div class="AFREXAMPLE">
+                                                        <p class="Akapitzlistą_7" style="text-align: justify;" data-mc-autonum="&lt;b&gt;Example:&lt;/b&gt;"><span class="autonumber"><span><b>Example:</b></span></span> </p>
                                                         <p class="Akapitzlistą_7" style="text-align: justify;">If you start business on 1 July, your proportionate limit will be PLN 100,000 (corresponding to the 6 months that you will be in business).</p>
                                                     </div>
                                                 </li>
@@ -258,20 +258,20 @@
                                                     <p class="Akapitzlistą_4" style="text-align: justify;">The most popular of them are medical services, educational services, teaching foreign languages, financial services. The detailed list of such goods and services can be found in Article 43 (1) of the <a href="https://isap.sejm.gov.pl/isap.nsf/DocDetails.xsp?id=WDU20040540535" target="_blank">VAT&#160;Act</a>.</p>
                                                     <p class="Akapitzlistą_4" style="text-align: justify;">If you plan to offer any of such services only, they will not be subject to VAT, even if you exceed the PLN 200,000.</p>
                                                     <p class="Akapitzlistą_4" style="text-align: justify;">&#160;</p>
-                                                    <div class="Remember">
-                                                        <p class="Akapitzlistą_4" style="text-align: justify;" data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span> </p>
+                                                    <div class="AFREMEMBER">
+                                                        <p class="Akapitzlistą_4" style="text-align: justify;" data-mc-autonum="&lt;b&gt;Remember:&lt;/b&gt;"><span class="autonumber"><span><b>Remember:</b></span></span> </p>
                                                         <p class="Akapitzlistą_4" style="text-align: justify;">You can voluntarily register for VAT, even if you are exempt. This might be profitable, as this will give you an opportunity to deduct VAT that you pay on your purchases.</p>
                                                     </div>
                                                     <p class="Akapitzlistą_4" style="text-align: justify;">&#160;</p>
-                                                    <p style="text-align: justify;">If you are not eligible for the exemption, you should register as VAT payer. Use the VAT-R form.</p>
-                                                    <p style="text-align: justify;">You can do it when registering your business in <a href="#" class="MCTextPopup MCTextPopupHotSpot MCTextPopup_Open MCTextPopupHotSpot_ #text" style="text-align: justify;">CEIDG<img class="MCHelpControl_Image_Icon" src="../Skins/Default/Stylesheets/Images/transparent.gif" height="11" width="16" alt="Closed" data-mc-alt2="Open" /><span class="MCTextPopupBody popupBody"><span class="MCTextPopupArrow"> </span>Centralna Informacja i Ewidencja Działalności Gospodarczej – the Central Register and Information on Economic Activity – is the Polish office run by the minister in charge of economic matters, where sole traderships and civil-law partnerships are registered</span></a>.</p>
+                                                    <p style="text-align: justify;">If you are not eligible for the exemption, you should register as VAT payer. Use the VAT-R form. You can download it from the website of the <a href="https://www.podatki.gov.pl/vat/e-deklaracje-vat/formularze-vat/#VAT-R" target="_blank">Polish Tax Office</a> in an electronic or in paper form. </p>
+                                                    <p style="text-align: justify;">You can do it when registering your business in CEIDG.</p>
                                                     <p style="text-align: justify;">You can choose one of the two options:</p>
                                                     <ul>
                                                         <li style="text-align: justify;">register as an active VAT payer</li>
                                                         <li style="text-align: justify;">register as a VAT-exempt payer – you can file the VAT-R form, but it is not obligatory.</li>
                                                     </ul>
-                                                    <div class="Remember">
-                                                        <p style="text-align: justify;" data-mc-autonum="&lt;b&gt;Remember: &lt;/b&gt;"><span class="autonumber"><span><b>Remember: </b></span></span>&#160;</p>
+                                                    <div class="AFREMEMBER">
+                                                        <p style="text-align: justify;" data-mc-autonum="&lt;b&gt;Remember:&lt;/b&gt;"><span class="autonumber"><span><b>Remember:</b></span></span>&#160;</p>
                                                         <p style="text-align: justify;">You can file the VAT-R form only if you have the NIP number.</p>
                                                     </div>
                                                 </li>
@@ -281,8 +281,8 @@
                                             <p style="text-align: justify;">
                                                 <img src="../Resources/Images/VAT_874x522.jpeg" style="width: 874;height: 522;" />
                                             </p>
-                                            <div class="Action">
-                                                <p style="text-align: justify;" data-mc-autonum="&lt;b&gt;What to do: &lt;/b&gt;"><span class="autonumber"><span><b>What to do: </b></span></span>&#160;</p>
+                                            <div class="AFRACTION">
+                                                <p style="text-align: justify;" data-mc-autonum="&lt;b&gt;What to do:&lt;/b&gt;"><span class="autonumber"><span><b>What to do:</b></span></span>&#160;</p>
                                                 <ol>
                                                     <li value="1">Check if you are required to register for VAT.</li>
                                                     <li value="2">If you are, file a relevant application (VAT-R)&#160;with&#160;your tax office.</li>
